examples/istio-jwt/02-magiclink-service.yaml
---
# MagicLink deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: magiclink
  namespace: magiclink
  labels:
    app: magiclink
    app.kubernetes.io/name: magiclink
spec:
  replicas: 1
  selector:
    matchLabels:
      app: magiclink
  template:
    metadata:
      labels:
        app: magiclink
    spec:
      
      containers:
      - name: magiclink
        image: robertlestak/magiclink:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: jwt-signer-primary
          mountPath: "/keys/primary"
          readOnly: true
        - name: jwt-signer-secondary
          mountPath: "/keys/secondary"
          readOnly: true
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "200m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
      volumes:
      - name: jwt-signer-primary
        secret:
          secretName: magiclink-jwt-signer-primary
      - name: jwt-signer-secondary
        secret:
          secretName: magiclink-jwt-signer-secondary

---
# MagicLink Kubernetes service
apiVersion: v1
kind: Service
metadata:
  name: magiclink
  namespace: magiclink
  labels:
    app: magiclink
    app.kubernetes.io/name: magiclink
spec:
  selector:
    app: magiclink
  ports:
  - port: 8080
    name: http
    targetPort: 8080
